unpackaged/main/default/objects/Linked_Address__c/Linked_Address__c.object-meta.xml
<CustomObject>
    <label>Linked Address</label>
    <nameField>
        <displayFormat>LA-{0}</displayFormat>
        <label>Linked Addresse #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>