unpackaged/main/default/objects/Linked_Address__c/fields/Link_Address_To__c.field-meta.xml
<CustomField>
    <fullName>Link_Address_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is just used to initially do the cloning</description>
    <label>Link Address To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Linked Addresses</relationshipLabel>
    <relationshipName>Linked_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>