unpackaged/main/default/objects/Linked_Address__c/fields/Linked_Address__c.field-meta.xml
<CustomField>
    <fullName>Linked_Address__c</fullName>
    <formula>HYPERLINK('/' + Linked_Address_From__c, Linked_Address_From__r.Name) &amp; ' &lt;-&gt; ' &amp; HYPERLINK('/' + Linked_Address_To__c, Linked_Address_To__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Address</label>
    <type>Text</type>
</CustomField>