unpackaged/main/default/objects/Linked_Address__c/fields/Linked_Address_From__c.field-meta.xml
<CustomField>
    <fullName>Linked_Address_From__c</fullName>
    <label>Linked Address From</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Linked Addresses (From)</relationshipLabel>
    <relationshipName>Linked_Addresses_From</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>