unpackaged/main/default/objects/Linked_Address__c/fields/Linked_Address_To__c.field-meta.xml
<CustomField>
    <fullName>Linked_Address_To__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <inlineHelpText>This address will initially be synced to the address selected here. Then they will be synced up whenever either address is updated.</inlineHelpText>
    <label>Linked Address To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Linked_Address_From__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Linked Addresses</relationshipLabel>
    <relationshipName>Linked_Addresses_To</relationshipName>
    <type>Lookup</type>
</CustomField>